Issue #552 filter style on mobile

--- a/web/themes/custom/gpw/src/components/filter/filter.scss
+++ b/web/themes/custom/gpw/src/components/filter/filter.scss
@@ -12,7 +12,9 @@
     display: inline-flex;
     justify-content: center;
     padding: 0 3em;
+
     @media #{$grid-breakpoint-max} {
+      padding: 0 1em;
       .control-label {
           margin-bottom: 0;
           vertical-align: middle;
